--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,5 +5,6 @@ export(createSimulation)
 export(originalPrivacy)
 export(privateEC)
 export(privateECinbix)
+export(privateECworkflow)
 export(privateRF)
 export(standardRF)
