--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,8 +3,9 @@
 export(compileResults)
 export(createSimulation)
 export(originalPrivacy)
+export(paperRealWorkflow)
+export(paperSimWorkflow)
 export(privateEC)
 export(privateECinbix)
-export(privateECworkflow)
 export(privateRF)
 export(standardRF)
