Added citation to the Bioinformatics paper.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,22 @@
 Package: privateEC
 Type: Package
-Title: Privacy Preserving Evaporative Cooling
+Title: Privacy preserving evaporative cooling feature selection and 
+    classification with Relief-F and Random Forests
 Version: 0.2.0
-Authors@R: person("Trang", "Le", email="trang-le@utulsa.edu", role=c("aut", "cre"))
+Date: May 2017
+Authors@R: c(person("Trang", "Le", email="trang-le@utulsa.edu", role=c("aut")), 
+  person("W. K.", "Simmons", role=c("aut")),
+  person("M.", "Misaki", role=c("aut")),
+  person("B. C.", "White", email="bill-white@utulsa.edu",role=c("aut", "cre")),
+  person("J.", "Savitz", role=c("aut")),
+  person("J.", "Borduka", role=c("aut")),
+  person("B. A.", "McKinney", role=c("aut")))
 Maintainer: Bill White <bill-white@utulsa.edu>
 Description: Privacy preserving evaporative cooling algorithm along
-    with other comparison algorithms used in the XXX paper.
+    with other comparison algorithms used in the Bioinformatics paper referenced 
+    below:\cite{Trang Le, W. K. Simmons, M. Misaki, B.C. White, J. Savitz, J. Bodurka, and 
+    B. A. McKinney. “Privacy preserving evaporative cooling feature selection and 
+    classification with Relief-F and Random Forests,”  Bioinformatics. Accepted. 2017.}
 License: GPL-3
 Depends: R (>= 3.1.0)
 Encoding: UTF-8
