--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -23,9 +23,12 @@ Depends: R (>= 3.1.0)
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1
-Imports: 
+Imports:
     randomForest,
     CORElearn,
     reshape2,
     igraph
-Suggests: testthat
+Suggests: testthat,
+    knitr,
+    rmarkdown
+VignetteBuilder: knitr
