--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,6 +12,7 @@ Description: The privateEC algorithm along with other comparison algorithms used
     B. A. McKinney. “Differential privacy-based Evaporative Cooling feature selection 
     and classification with Relief-F and Random Forests,” Bioinformatics. Accepted. 
     https://doi.org/10.1093/bioinformatics/btx298. 2017.
+URL: http:/insilico.utulsa.edu/privateEC
 License: GPL-3
 Depends: R (>= 3.1.0)
 Encoding: UTF-8
@@ -21,8 +22,14 @@ Imports:
     randomForest,
     CORElearn,
     reshape2,
-    igraph
-Suggests: testthat,
+    igraph,
+    methods,
+    stats,
+    utils
+Suggests: 
+    testthat,
     knitr,
-    rmarkdown
+    rmarkdown,
+    devtools,
+    roxygen2
 VignetteBuilder: knitr
