Added Saeid's EpistasisRank function as an importance method option.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,8 @@
 
 export(createMainEffects)
 export(createSimulation)
+export(epistasisRank)
+export(getImportanceScores)
 export(originalThresholdout)
 export(paperRealWorkflow)
 export(paperSimWorkflow)
