--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(getImportanceScores)
 export(originalThresholdout)
 export(paperRealWorkflow)
 export(paperSimWorkflow)
+export(plotRunResults)
 export(privateEC)
 export(privateRF)
 export(splitDataset)
