--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,7 +20,7 @@ License: GPL-3
 Depends: R (>= 3.1.0)
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 6.0.1
+RoxygenNote: 6.0.1.9000
 Imports:
     randomForest,
     xgboost,
@@ -28,6 +28,8 @@ Imports:
     reshape2,
     igraph,
     methods,
+    caret,
+    glmnet,
     stats,
     utils
 Suggests: 
